--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                     <div class="social-links">
 
-                         <img id="social_img" src="images/sam2.PNG">
+                         <img id="social_img" src="images/samR.jpeg">
                          <h3> Find me on Facebook & twitter </h3>
 
                          <a target="_blank" href="#"> Facebook:@samuelheletsi</a>
