--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                         </div>
                         <p id="settings-note"> *Theme settings will be saved for<br> your next visit</p>
-
+                        <marquee direction="left">IF IT IS UP TO BE THEN IT IS UP TO ME </marquee>
                     </div>
 
                     <div class="right-column"> 
